BUGFIX: wrong font-family

--- a/Resources/Public/Contrib/Fontawesome/css/fontawesomeLink.css
+++ b/Resources/Public/Contrib/Fontawesome/css/fontawesomeLink.css
@@ -1,33 +1,34 @@
-
 @font-face {
-  font-family: 'Font Awesome 5 Pro';
+  font-family: 'Font Awesome 5 Free';
   font-style: normal;
   font-weight: 900;
-  src: url("../../../../../../../../../fileadmin/T3SB/FA5Pro/webfonts/fa-solid-900.eot");
-  src: url("../../../../../../../../../fileadmin/T3SB/FA5Pro/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../../../../../../../../../fileadmin/T3SB/FA5Pro/webfonts/fa-solid-900.woff2") format("woff2"), url("../../../../../../../../../fileadmin/T3SB/FA5Pro/webfonts/fa-solid-900.woff") format("woff"), url("../../../../../../../../../fileadmin/T3SB/FA5Pro/webfonts/fa-solid-900.ttf") format("truetype"), url("../../../../../../../../../fileadmin/T3SB/FA5Pro/webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
+  src: url("../webfonts/fa-solid-900.eot");
+  src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.woff") format("woff"), url("../webfonts/fa-solid-900.ttf") format("truetype"), url("../webfonts/fa-solid-900.svg#fontawesome") format("svg"); }
 
 
 .internal-link::before,
 .external-link::before,
 .download-link::before,
 .email-link::before {
-	margin-right: 0.5em;
-	display: inline-block;
-	font-style: normal;
-	font-variant: normal;
-	text-rendering: auto;
-	-webkit-font-smoothing: antialiased;
+    margin-right: 0.5em;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
 }
 
 .internal-link::before {
-	font-family: "Font Awesome 5 Pro"; font-weight: 900; content: "\f0c1";
+	font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0c1";
 }
 .external-link::before {
-	font-family: "Font Awesome 5 Pro"; font-weight: 900; content: "\f35d";
+	font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f35d";
 }
 .download-link::before {
-	font-family: "Font Awesome 5 Pro"; font-weight: 900; content: "\f019";
+	font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f019";
 }
 .email-link::before {
-	font-family: "Font Awesome 5 Pro"; font-weight: 900; content: "\f0e0";
+	font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0e0";
 }
+
+
